--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,34 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<div class="prueba_estilo">
+    {{#link-to "index"}}
+        <p>Index</p>
+    {{/link-to}}
+</div>
 
-{{outlet}}
+<div>
+    {{#link-to "about"}}
+        <p>About</p>
+    {{/link-to}}
+</div>
+<div>
+    {{#link-to "contact"}}
+        <p>contact</p>
+    {{/link-to}}
+</div>
+<div>
+    {{#link-to "ruta-formacion-academica"}}
+        <p>Formacion Academica</p>
+    {{/link-to}}
+</div>
+
+
+
+<div>
+    <label>{{username}}</label>
+    <label>Test</label>
+</div>
+{{outlet}}  
+{{!-- este hace que los hijos la encuentren  --}}
+
+<div>
+    Footer
+</div>
